tests/js/error/astRewrite/parse_asi6.js
/* from ECMAScript 5.0 */
{ 1
2 } 3
return
a + b
a = b
++c
